--- a/final-project/src/main/resources/application.properties
+++ b/final-project/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
 spring.jpa.show-sql=true
 
-spring.datasource.url=jdbc:h2:mem:eshopdb
+spring.datasource.url=jdbc:h2:mem:finalprojectdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sandra
 spring.datasource.password=
