--- a/final-project/src/main/resources/application.properties
+++ b/final-project/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.h2.console.path=/h2
 
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.jpa.properties.hibernate.format_sql=true
