user id to user dto added save investment method created jwt token expiraation added

--- a/final-project/src/main/resources/application.properties
+++ b/final-project/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.properties.hibernate.format_sql=true
+
+#logging.level.root=DEBUG/TRACE/INFO/ERROR
+
