--- a/final-project/src/main/resources/application.properties
+++ b/final-project/src/main/resources/application.properties
@@ -1,18 +1,22 @@
-spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+#choose which profile to run
+#dev - runs on H2 database
+#default - runs on MYSQL database
+spring.profiles.active=dev
+
+#set your user and password variables in .env file (.env.example is provided)
+spring.datasource.url=jdbc:mysql://${MYSQL_SERVER_URL:localhost}:3306/pm_app
+spring.datasource.username=${MYSQL_USER}
+spring.datasource.password=${MYSQL_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
-
-spring.datasource.url=jdbc:h2:mem:finalprojectdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sandra
-spring.datasource.password=
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
+spring.sql.init.mode=embedded
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=validate
 
 spring.jpa.defer-datasource-initialization=true
-spring.jpa.hibernate.ddl-auto=create-drop
 
-spring.jpa.properties.hibernate.format_sql=true
+logging.level.root=INFO
 
-#logging.level.root=DEBUG/TRACE/INFO/ERROR
+
 
